feat: 使用 chalk 优化服务信息输出

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "common tools for js",
   "main": "mian.js",
+  "type": "module",
   "scripts": {
-    "dev": "rollup -c ./rollup.config.js -w",
-    "build": "rollup -c ./rollup.config.js",
+    "dev": "rollup -c ./rollup.config.mjs -w",
+    "build": "rollup -c ./rollup.config.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
