--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "rollup-plugin-serve": "^2.0.0"
   }
 }
