--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
   "homepage": "https://github.com/tenstepskilloneperson/toolsJs#readme",
   "dependencies": {
     "chalk": "^5.0.1",
-    "rollup": "^2.77.2"
+    "rollup": "^2.77.2",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@rollup/plugin-babel": "^5.3.1",
-    "rollup-plugin-serve": "^2.0.0"
+    "@rollup/plugin-typescript": "^8.4.0",
+    "rollup-plugin-serve": "^2.0.0",
+    "typescript": "^4.8.2"
   }
 }
