--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "toolsjs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "common tools for js",
   "main": "mian.js",
   "type": "module",
   "scripts": {
     "dev": "rollup -c ./rollup.config.mjs -w",
     "build": "rollup -c ./rollup.config.mjs",
+    "prepublish": "yarn version && yarn build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +20,7 @@
     "Typescript"
   ],
   "author": "lixiaoning",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tenstepskilloneperson/toolsJs/issues"
   },
@@ -32,9 +33,34 @@
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-typescript": "^8.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
+    "husky": "3.1.0",
+    "lint-staged": "^13.0.3",
     "rollup-plugin-serve": "^2.0.0",
     "typescript": "^4.8.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "node --max_old_space_size=8192 ./node_modules/.bin/prettier -w",
+      "node --max_old_space_size=8192 ./node_modules/.bin/eslint --fix --color",
+      "git add"
+    ]
   }
 }
