--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
   "lint-staged": {
     "*.{ts,js}": [
       "node ./node_modules/.bin/prettier",
-      "node ./node_modules/.bin/eslint --fix --color",
-      "git add"
+      "node ./node_modules/.bin/eslint --fix --color"
     ]
   }
 }
