--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        // 允许使用 any 类型
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
