--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "toolsjs",
-  "version": "1.0.0",
+  "name": "@killonepits/toolsjs",
+  "version": "1.0.1",
   "description": "common tools for js",
-  "main": "mian.js",
+  "main": "dist/toosJs.cjs.js",
+  "module": "dist/toosJs.es.js",
   "type": "module",
   "scripts": {
     "dev": "rollup -c ./rollup.config.mjs -w",
