--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "types": "types/index.d.ts",
   "type": "module",
   "scripts": {
-    "dev": "rollup -c ./rollup.config.mjs -w",
-    "build": "rollup -c ./rollup.config.mjs",
+    "dev": "cross-env NODE_ENV=development rollup -c ./rollup.config.mjs -w",
+    "build": "rimraf lib/* && cross-env NODE_ENV=production rollup -c ./rollup.config.mjs",
     "prepublish": "yarn version && yarn build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,11 +27,6 @@
     "url": "https://github.com/tenstepskilloneperson/toolsJs/issues"
   },
   "homepage": "https://github.com/tenstepskilloneperson/toolsJs#readme",
-  "dependencies": {
-    "chalk": "^5.0.1",
-    "rollup": "^2.77.2",
-    "tslib": "^2.4.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
@@ -41,11 +36,16 @@
     "@rollup/plugin-typescript": "^8.4.0",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "chalk": "^5.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.23.0",
     "husky": "3.1.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.79.0",
     "rollup-plugin-serve": "^2.0.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.8.2"
   },
   "husky": {
